Fix dash spacings (#2620)

--- a/src/ui/units/dash/containers/FixedHeader/FixedHeader.scss
+++ b/src/ui/units/dash/containers/FixedHeader/FixedHeader.scss
@@ -67,12 +67,7 @@
     */
     --btn-click-scale-compensantion: 1px;
 
-    margin-bottom: var(--g-spacing-4);
     margin-inline: calc(-1 * var(--dash-inline-padding));
-
-    &_no-content {
-        margin-block: 0 calc(-1 * var(--g-spacing-4));
-    }
 
     &__wrapper {
         position: relative;
